[package]
name = "graph-edge-evolution"
version = "0.1.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/graph-edge-evolution"
description = "Develops a graph by applying certain operations on an active edge"
keywords = ["graph", "generation"]

[dev-dependencies]

asexp = "0.2.0"
grabinput = "^0.1"
